se modifica generacion de reporte 211 junto con la actualizacion del campo profesion :zap: avance mejora modificacion de nombre de reporte 211

--- a/ELE.Principal/bin/mensajes.properties
+++ b/ELE.Principal/bin/mensajes.properties
@@ -40,7 +40,7 @@ noHabil = Actualmente no se encuentra habilitado para la inscripci\u00F3n de pla
 noAsociado = Señor usuario el asociado persona natural "
 noAsociado1 = " no existe en la base de datos.\n Consulte el portal www.coomeva.com.co
 msgHabil = Usted cumple con los requisitos para continuar el proceso de Inscripci\u00F3n de Planchas\n recuerde que un asociado solo puede estar inscrito en una sola plancha.
-msgNoHabil = Lastimosamente usted no cumple con los requisitos necesarios para inscribir una plancha\n Por favor comun\u00EDquese a una oficina autorizada para inscripci\u00F3n de planchas\n Consulte el portal www.coomeva.com.co  
+msgNoHabil = Lastimosamente usted no cumple con los requisitos necesarios para inscribir una plancha.\n Por favor comun\u00EDquese a una oficina autorizada para inscripci\u00F3n de planchas.\n Consulte el portal www.coomeva.com.co  
 noFormatoNumeroID = Señor usuario la identificación que se envío no es numérica
 msgPertenecePlancha = Usted pertenece a una plancha ya inscrita, por lo tanto no puede hacer modificaciones
 confirmarPlanchaModHabil = ¿Desea guardar los cambios realizados?
@@ -94,7 +94,7 @@ noCheckPlacha = Señor usuario por favor seleccione al menos una plancha
 noImagen = Señor usuario debes Ingresar una imagen para seguir con el proceso de verificación
 noRepNuPlanchas = Señor usuario no se pueden repetir números de plancha
 vldAsociadoMayor3 = El Asociado no Tiene una Antigüedad Mayor a Tres Años.
-vldAsociadoFechaObtencionTitulo = Estimado asociado, usted no cumple con la antiguedad de 3 años de acreditacion de estudios como profesional, tecnico, tecnologo o acreditacion de oficio, para asprirar a ser Delegado de la Asamblea General Cooperativa.
+vldAsociadoFechaObtencionTitulo = Estimado(a) asociado(a), usted no cumple con la antiguedad de 3 años de acreditacion de estudios como profesional, tecnico, tecnologo o acreditacion de oficio, para asprirar a ser Delegado de la Asamblea General Cooperativa.
 vldZonaValida = El Asociado no pertenece a una zona Valida para el proceso de Eleccion de Juntas Zonales.
 vldAsociadoInactivo = El Asociado se encuentra inactivo.
 vldAsoHab = El Asociado se encuentra Inhábil por conceptos Financieros.
@@ -121,7 +121,7 @@ recuerdeImagen = Recuerde asignarle una imagen a este cabeza de plancha
 noSuplente = Debe ingresar al menos un suplente para poder verificar la plancha
 msgNotaPlancha = NOTA: Su plancha presenta Inhabilidades.
 msgExitoso = La modificación de la plancha y la generación del PDF Se han completado exitosamente. Recuerde imprimir y radicar en oficinas autorizadas para inscripción de planchas
-msgNoEmpleadoNatural = Estimado Asociado,  recuerde que no se admite la conformaci\u00F3n de Planchas Mixtas.  El asociado con n\u00FAmero de documento
+msgNoEmpleadoNatural = Estimado(a) Asociado(a),  recuerde que no se admite la conformaci\u00F3n de Planchas Mixtas.  El asociado con n\u00FAmero de documento
 msgNoEmpleadoNatural1 = pertenece a una zona especial y no es empleado
 msgNoEmpleadoNatural2 = pertenece a una zona especial
 noEvaluaPlanchaIn = No se puede aceptar la plancha si unos de sus miembros presenta inhabilidades
@@ -145,22 +145,22 @@ noHabil2 =Actualmente no se encuentra habilitado para la inscripci\u00F3n de pla
 msgErrorCargaArchivosExternos=Se ha presentado un error en el procesamiento del archivo. La carga de datos no se ha realizado con \u00E9xito. 
 msgErrorExtensionArchivo=El archivo tiene una extensi\u00F3n no permitida. Por favor cargar un archivo en formato TXT.
 ##msgInicioRegistroPlancha = El siguiente formulario debe ser diligenciado en su totalidad.
-msgInicioRegistroPlancha = Apreciado Asociado, recuerde que este formato Inscripci\u00F3n de plancha deber\u00E1 ser diligenciado en su totalidad por alguno de los integrantes miembros principales con el fin de poder completar el proceso de inscripci\u00F3n.
+msgInicioRegistroPlancha = Apreciado(a) Asociado(a), recuerde que este formato Inscripci\u00F3n de plancha deber\u00E1 ser diligenciado en su totalidad por alguno de los integrantes miembros principales con el fin de poder completar el proceso de inscripci\u00F3n.
 msgAsociadoInhabilRegistroPlancha =El n\u00FAmero de documento {0} no corresponde a un asociado h\u00E1bil.
 msgErrorNullPointerException = Se ha presentado un error no controlado.  Por favor comuniquese con el administrador del sistema
 #msgErrorAsociadoPerteneceOtraPlancha =Estimado Asociado, recuerde que un Asociado no puede estar inscrito en más de una Plancha y el asociado con número de cédula {0} ya se encuentra registrado en otra plancha.
 #msgErrorAsociadoPerteneceOtraPlancha = Estimado Asociado, en  el Proceso de Elección de Representantes a Juntas Zonales, ningún asociado podrá pertenecer a más de una plancha, según lo establecido en el Art. 27 numeral 2 de la Resolución 357 del Consejo de Administración
-msgErrorAsociadoPerteneceOtraPlancha = Estimado Asociado, recuerde que un Asociado puede estar inscrito en una sola plancha y usted ya se encuentra registrado en una.
-msgErrorNoSePermitenPlanchasMixtas = Estimado Asociado,  recuerde que no se admite la conformaci\u00F3n de Planchas Mixtas.  El asociado con n\u00FAmero de documento {0} que intenta ingresar es empleado, promotor o corredor del grupo Coomeva.
+msgErrorAsociadoPerteneceOtraPlancha = Estimado(a) Asociado(a), recuerde que un Asociado puede estar inscrito en una sola plancha y usted ya se encuentra registrado en una.
+msgErrorNoSePermitenPlanchasMixtas = Estimado(a) Asociado(a),  recuerde que no se admite la conformaci\u00F3n de Planchas Mixtas.  El asociado con n\u00FAmero de documento {0} que intenta ingresar es empleado, promotor o corredor del grupo Coomeva.
 #msgErrorNoSePermitenPlanchasEmpleados = Estimado asociado,  recuerde que no se admite la conformaci\u00F3n de Planchas integradas por empleados. El asociado con n\u00FAmero de documento {0} que intenta ingresar es empleado, promotor o corredor del grupo Coomeva.
-msgErrorNoSePermitenPlanchasEmpleados = Estimado Asociado, los empleados de Coomeva no pueden ser elegidos en el proceso de Elección de Representantes a Juntas Zonales, según lo establecido en el Art. 18 Parágrafo 3 de la Resolución 357 del Consejo de Administración
+msgErrorNoSePermitenPlanchasEmpleados = Estimado(a) Asociado(a), los empleados de Coomeva no pueden ser elegidos en el proceso de Elección de Representantes a Juntas Zonales, según lo establecido en el Art. 18 Parágrafo 3 de la Resolución 357 del Consejo de Administración
 #msgErrorAsoPertenceInstitucionElectoral = Estimado asociado, recuerde que usted no puede inscribir en ninguna plancha a un asociado que sea miembro de instituciones como el Tribunal de Elecciones y Escrutinios, la Comisión Electoral o el Comité Auxiliar de Elecciones, y  el asociado con número de documento {0} pertenece a alguna de estas.
 #msgErrorAsoPertenceInstitucionElectoral=Estimado Asociado, los integrantes del Tribunal de Elecciones y de las Comisiones y Comités Electorales no pueden ser elegidos en el proceso de Elección de Representantes a Juntas Zonales, según lo establecido en el Art. 25 de la Resolución 357 del Consejo de Administración
 msgErrorAsoPertenceInstitucionElectoral=Recuerde que al ser miembro del Tribunal de Elecciones y Escrutinios o del Comisión Electoral o del Comité Auxiliar de Elecciones, usted se encuentra inhabilitado para inscribirse a una plancha.
 msgErrorAsociadoYaRegistradoEnPlancha = el asociado {0} ya se encuentra registrado en la plancha actual.
 #msgErrorAsoSancionados5AnnosAtras = Estimado Asociado, el asociado {0} no cumple con lo establecido en el numeral 5 - Art\u00EDculo 20 de la resoluci\u00F3n No.341 del Consejo de Administraci\u00F3n.
-msgErrorAsoSancionados5AnnosAtras = Estimado Asociado, usted fue sancionado durante los 5 años anteriores a la nominación, generando suspensión o pérdida de sus derechos sociales, de acuerdo con lo establecido en el Estatuto de la Cooperativa, por lo tanto, no puede aspirar a ser Delegado de la Asamblea General Cooperativa.
-msgErrorNoSePermitenPlanchasAsociadoJuridico = Estimado Asociado, las Personas Jurídicas asociadas a Coomeva no pueden ser elegidos en el proceso de Elección de Representantes a Juntas Zonales, según lo establecido en el Art. 1 numeral 3 de la Resolución 357 del Consejo de Administración
+msgErrorAsoSancionados5AnnosAtras = Estimado(a) Asociado(a), usted fue sancionado durante los 5 años anteriores a la nominación, generando suspensión o pérdida de sus derechos sociales, de acuerdo con lo establecido en el Estatuto de la Cooperativa, por lo tanto, no puede aspirar a ser Delegado de la Asamblea General Cooperativa.
+msgErrorNoSePermitenPlanchasAsociadoJuridico = Estimado(a) Asociado(a), las Personas Jurídicas asociadas a Coomeva no pueden ser elegidos en el proceso de Elección de Representantes a Juntas Zonales, según lo establecido en el Art. 1 numeral 3 de la Resolución 357 del Consejo de Administración
 
 #Mensajes para el modulo de cuociente electoral
 campo.obligatorio.cuociente.totalDelegadosElegir = El Total delegados a elegir es requerido para el calculo del cuociente electoral
@@ -173,14 +173,14 @@ no.existe.cuociente.electoral				=No existe un cuociente electoral correspondien
 #msgErrorEmpleadoRetiradoMenos3Annos = Estimado Asociado,  el asociado {0} no cumple con lo establecido en el numeral 7 - Art\u00EDculo 20 de la resoluci\u00F3n No.341 del Consejo de Administraci\u00F3n.
 #msgErrorEmpleadoRetiradoMenos3Annos = Estimado Asociado, usted no cumple con lo establecido en el numeral b - Art\u00EDculo 18 de la resoluci\u00F3n No.357 del Consejo de Administraci\u00F3n.
 #msgErrorEmpleadoRetiradoMenos3Annos = Estimado Asociado, usted no cumple con el tiempo de retiro de Coomeva o sus empresas como empleado o promotor de mínimo 3 años, para aspirar a ser Delegado de la Asamblea General de la Cooperativa
-msgErrorEmpleadoRetiradoMenos3Annos =Estimado Asociado, usted no cumple con el tiempo de retiro de m\u00EDnimo 3 años como empleado o promotor de Coomeva o una de alguna de sus empresas, para aspirar a ser Delegado de la Asamblea General de la Cooperativa
+msgErrorEmpleadoRetiradoMenos3Annos =Estimado(a) Asociado(a), usted no cumple con el tiempo de retiro de m\u00EDnimo 3 años como empleado o promotor de Coomeva o una de alguna de sus empresas, para aspirar a ser Delegado de la Asamblea General de la Cooperativa
 
 campo.obligatorio.delegadoZona.periodoEelctoral = El periodo electoral es requerido para el cálculo de los delegados por Zona Electoral
 campo.obligatorio.delegadoZona.noCuociente		= No se encontró un cuociente electoral asociado al perioro electoral ingresado
 campo.obligatorio.delegadoZona.regional			= La Regional es requerica para el cáculo de delegados por regional
 campo.obligatorio.delegadoZona.zona				= La Zona es requerica para el cáculo de delegados por regional
 campo.obligatorio.delegadoZona.habiles			= La Suma de Hábiles es requerica para el cáculo de delegados por regional
-msgAsociadoDebeAcreditarOficio = El asociado no registra profesi\u00F3n. Por favor actualice la misma en este formato para poder continuar.
+msgAsociadoDebeAcreditarOficio=El asociado no registra profesi\u00F3n.\n- Por favor actualice la misma descargando el Certificado de Profesion u Oficio para poder continuar.
 #msgAsociadoDebeAcreditarOficio = El asociado no registra profesi\u00F3n. Por favor actualice la misma en este formato para poder continuarPor favor actualice la misma en este formato, una vez termine el registro de la plancha ingrese a la opci\u00F3n acreditaci\u00F3n de oficio y genere el formato. Por \u00FAltimo adjunte este formato a los dem\u00E1s documentos de la plancha.  
 campo.obligatorio.delegadoZona.asociadosHabi	= No se encontraron asociados hábiles para la una zona electoral.
 
@@ -195,7 +195,7 @@ campo.obligatorio.delegadoZona.totalDelegadosZona 		= El total de delegados es r
 campo.obligatorio.delegadoZona.noExiste					= No se ha encontrado el registro de delegados por zona con los datos ingresados
 msgErrorAsociadoConMenos3AnnosAntiguedad = El asociado no cumple con la antigüedad requerida.
 #msgErrorAsociadoConMenos1AnnoAntiguedad = Estimado Asociado, usted no cumple con lo establecido en el numeral b - Art\u00EDculo 18 de la resoluci\u00F3n No.357 del Consejo de Administraci\u00F3n.
-msgErrorAsociadoConMenos1AnnoAntiguedad = Estimado Asociado, usted no cumple con la antigüedad requerida como Asociado a la Cooperativa para aspirar a ser Delegado de la Asamblea General Cooperativa
+msgErrorAsociadoConMenos1AnnoAntiguedad = Estimado(a) Asociado(a), usted no cumple con la antigüedad requerida como Asociado a la Cooperativa para aspirar a ser Delegado de la Asamblea General Cooperativa
 msgPeriodoMarcarPlanchaRecurso=Estimado usuario\: Recuerde que las fechas establecidas para realizar la interposici\u00F3n de recursos planchas rechazadas son {0}, {1}
 msgInicioRegistroAcreditacionOficio =Estimado asociado\: Recuerde que este formulario debe ser diligenciado en su totalidad por el declarante que no sea profesional, t\u00E9cnico o tecn\u00F3logo
 
@@ -236,8 +236,8 @@ msg.plancha.debe.estar.inadmitida = Para marcar una plancha en recurso, esta deb
 msg.imposible.imprimir.resolucion.admision =Para imprimir la resoluci\u00F3n de admisi\u00F3n, la plancha debe estar inscrita, inadmitida o en recurso
 
 #msgErrorAsociadoConMenos3AnnosObtencionTitulo = Estimado asociado, el asociado ingresado no cumple con la antiguedad mínima requerida como profesional, de acuerdo con lo establecido en el numeral 4 - artículo 20 de la resolución No. 341 del Consejo de Administración
-msgErrorAsociadoConMenos3AnnosObtencionTitulo = Estimado Asociado, usted no cumple con la antigüedad de 3 años de acreditación en su profesión u oficio, para aspirar a ser Delegado de la Asamblea General Cooperativa
-msgErrorAsociadoNoCuentaConFechaObtencionTitulo =Estimado asociado, el asociado con n\u00FAmero de documento {0} no cuenta con la fecha de obtenci\u00F3n actualizada de su t\u00EDtulo ya sea t\u00E9cnico, tecnol\u00F3gico o profesional, por lo cual no puede registrarse en la plancha
+msgErrorAsociadoConMenos3AnnosObtencionTitulo = Estimado(a) Asociado(a), usted no cumple con la antigüedad de 3 años de acreditación en su profesión u oficio, para aspirar a ser Delegado de la Asamblea General Cooperativa
+msgErrorAsociadoNoCuentaConFechaObtencionTitulo =Estimado(a) asociado(a), el asociado con n\u00FAmero de documento {0} no cuenta con la fecha de obtenci\u00F3n actualizada de su t\u00EDtulo ya sea t\u00E9cnico, tecnol\u00F3gico o profesional, por lo cual no puede registrarse en la plancha
 msg.imposible.generar.resolucion.rechazo.plancha.admitida =No es posible generar una resoluci\u00F3n de rechazo para una plancha que se encuentra en estado diferente a inadmitida.
 msg.imposible.generar.resolucion.rechazo.plancha.inadmitida =No es posible generar una resoluci\u00F3n de rechazo para la plancha ya que NO se encuentra inadmitida o en recurso.
 msg.imposible.generar.resolucion.rechazo.plancha.inadmitida2 =No es posible generar una resoluci\u00F3n de inadmisi\u00F3n para la plancha ya que NO se encuentra inscrita.
