--- a/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -309,7 +309,7 @@ mnuCargarArchivoSancionados =Cargar Sancionados 5 A\u00F1os
 mensajeIngresoInfoCabezaPlancha=El asociado no se encuentra inscrito como cabeza de plancha o Suplente cabeza de plancha, diligencie el formato de Registro de Plancha y guarde e imprima la informaci\u00F3n. 
 mnuinfocabezaplancha=Registrar Informaci\u00F3n General de Asociado Cabeza de la Plancha
 mnuinfosuplentePlancha=Registrar Informaci\u00F3n General de Asociado Suplente de la Plancha
-lblMensajeInfoCabezaPlancha=Estimado asociado, recuerde que este formato deber\u00E1 ser diligenciado unicamente por el cabeza de plancha. Para dar por terminado el proceso de diligenciamiento del formulario, debe hacer clic sobre el bot\u00F3n Finalizar y enviar
+lblMensajeInfoCabezaPlancha=Estimado(a) asociado(a), recuerde que este formato deber\u00E1 ser diligenciado unicamente por el cabeza de plancha. Para dar por terminado el proceso de diligenciamiento del formulario, debe hacer clic sobre el bot\u00F3n Finalizar y enviar
 lblImprAdmision = Imprimir Resoluci\u00F3n Admisi\u00F3n
 txtImprAdmision =Estimado usuario\: Se realiz\u00F3 la admisi\u00F3n de la plancha. Por favor genere e imprima el formato de Expedici\u00F3n de Resoluci\u00F3n de Admisi\u00F3n
 lblResolAdmision =Resoluci\u00F3n Admisi\u00F3n
@@ -552,6 +552,6 @@ txtFirmaRadicada=Señor asociado, su plancha se encuentra inscrita satisfactoriam
 btnEnviarRadicacion=Enviar Radicaci\u00F3n
 lblDetallePendientes=Detalle de Pendientes
 lblTipoFirma=Firmar Plancha
-confirmacionFirmaPresencial=Estimado asociado para finalizar su proceso de inscripci\u00F3n de planchas, deber\u00E1 descargar los formatos diligenciados y hacerlos firmar por cada uno de los integrantes de la plancha. estos documentos deben ser radicados ante la comision electoral en la oficina de coomeva definida para inscripci\u00F3n de planchas. consulte la oficina https://www.coomeva.com.co/elecciondelegados2022/
-confirmacionFirmaVirtual=Estimado asociado para finalizar su proceso de inscripci\u00F3n de plancha, deber\u00E1 firmar los formatos de manera electronica. pronto le llegar\u00E1 a cada integrante de la plancha un correo electronco para su respectiva firma. una vez realizado este proceso, la comision electoral proceder\u00E1 a generar el certificado de radicación y recibo.
+confirmacionFirmaPresencial=Estimado(a) Asociado(A) para finalizar su proceso de inscripci\u00F3n de planchas, deber\u00E1 descargar los formatos diligenciados y hacerlos firmar por cada uno de los integrantes de la plancha. Estos documentos deben ser radicados ante la Comisi\u00F3n Electoral en la oficina de Coomeva definida para inscripci\u00F3n de planchas.\nConsulte la oficina https://www.coomeva.com.co/elecciondelegados2022/
+confirmacionFirmaVirtual=Estimado(a) Asociado(a) para finalizar su proceso de inscripci\u00F3n de plancha, deber\u00E1 firmar los formatos de manera electronica. Pronto le llegar\u00E1 a cada integrante de la plancha un correo electronico para su respectiva firma. Una vez realizado este proceso, la Comisi\u00F3n Electoral proceder\u00E1 a generar el certificado de radicaci\u00F3n y recibo.
 
