correción de formato en reportes.

--- a/ELE.Principal/bin/mensajes.properties
+++ b/ELE.Principal/bin/mensajes.properties
@@ -264,7 +264,7 @@ msgRegistroExitosoVotante=El registro del votante ha sido exitoso
 ################
 msg.plancha.ya.esta.en.recurso = La plancha ya está en recurso
 msg.plancha.no.puede.estar.en.recurso= Sólo se puede marcar una plancha en recurso si está admitida o rechazada
-msg.imposible.imprimir.resolucion.recursos=S\u00F3lo se puede imprimir la resoluci\u00F3n si est\u00E1 admitida o inadmitida
+msg.imposible.imprimir.resolucion.recursos=S\u00F3lo se puede imprimir la resoluci\u00F3n si est\u00E1 admitida o rechazada
 ################
 # Mensaje para registro de novedades de habilidad 
 ################
