ajustes de forma a reportes

--- a/ELE.Principal/bin/mensajes.properties
+++ b/ELE.Principal/bin/mensajes.properties
@@ -180,7 +180,7 @@ campo.obligatorio.delegadoZona.noCuociente		= No se encontró un cuociente electo
 campo.obligatorio.delegadoZona.regional			= La Regional es requerica para el cáculo de delegados por regional
 campo.obligatorio.delegadoZona.zona				= La Zona es requerica para el cáculo de delegados por regional
 campo.obligatorio.delegadoZona.habiles			= La Suma de Hábiles es requerica para el cáculo de delegados por regional
-msgAsociadoDebeAcreditarOficio=El asociado no registra profesi\u00F3n.\n- Por favor actualice la misma descargando el Certificado de Profesion u Oficio para poder continuar.
+msgAsociadoDebeAcreditarOficio=El asociado no registra profesi\u00F3n. Por favor actualice la misma descargando el Certificado de Profesion u Oficio para poder continuar.
 #msgAsociadoDebeAcreditarOficio = El asociado no registra profesi\u00F3n. Por favor actualice la misma en este formato para poder continuarPor favor actualice la misma en este formato, una vez termine el registro de la plancha ingrese a la opci\u00F3n acreditaci\u00F3n de oficio y genere el formato. Por \u00FAltimo adjunte este formato a los dem\u00E1s documentos de la plancha.  
 campo.obligatorio.delegadoZona.asociadosHabi	= No se encontraron asociados hábiles para la una zona electoral.
 
@@ -244,6 +244,7 @@ msg.imposible.generar.resolucion.rechazo.plancha.inadmitida2 =No es posible gene
 msg.imposible.inadmitir.plancha.no.registrada =La plancha no se encuentra en estado inscrita, por lo tanto no se puede inadmitir
 msg.error.imposible.generar.constancia.recibo.plancha.no.inscrita =No es posible generar la constancia de recibo para una plancha en estado diferente a inscrita
 msg.error.imposible.generar.constancia.recibo.plancha.no.registrada =No es posible generar la constancia de recibo para una plancha en estado diferente a registrada
+msg.error.imposible.generar.cumplimiento.requisitos.plancha.no.registrada =No es posible generar la constancia cumplimiento de requisitos para una plancha en estado diferente a registrada
 msgAsociadoNoHabilParaElegirSerElegido =El asociado no se encuentra h\u00E1bil por lo tanto no puede ser registrado como integrante de la plancha
 msgExcepcionAsociadoNoHabil =El asociado no se encuentra h\u00E1bil por lo tanto no puede ser registrado como integrante de la plancha
 ################
