--- a/ELE.Principal/config.files/parametros.properties
+++ b/ELE.Principal/config.files/parametros.properties
@@ -263,6 +263,7 @@ codigo.formato.delegado.recursoFavorable = 16
 codigo.formato.delegado.recursoEnContra = 17
 codigo.formato.delegado.extemporaneamente = 18
 codigo.formato.delegado.favorable = 19
+codigo.formato.constancia.cumplimiento.requisitos = 21
 
 ##########################################################
 #			Codigos de formatos	Representantes			 #
