--- a/ELE.Principal/bin/mensajes.properties
+++ b/ELE.Principal/bin/mensajes.properties
@@ -93,7 +93,7 @@ noEliminarNoPlncha = Señor usuario no se limpiaron los números de plancha
 noCheckPlacha = Señor usuario por favor seleccione al menos una plancha
 noImagen = Señor usuario debes Ingresar una imagen para seguir con el proceso de verificación
 noRepNuPlanchas = Señor usuario no se pueden repetir números de plancha
-vldAsociadoMayor3 = El Asociado no Tiene una Antigüedad Mayor a Tres Años.
+vldAsociadoMayor3 = El Asociado(a) no tiene una antigüedad mayor a tres años.
 vldAsociadoFechaObtencionTitulo = Estimado(a) asociado(a), usted no cumple con la antiguedad de 3 años de acreditacion de estudios como profesional, tecnico, tecnologo o acreditacion de oficio, para asprirar a ser Delegado de la Asamblea General Cooperativa.
 vldZonaValida = El Asociado no pertenece a una zona Valida para el proceso de Eleccion de Juntas Zonales.
 vldAsociadoInactivo = El Asociado se encuentra inactivo.
