se agrega validacion de tipo de archivo para el crague de otras entidades en modulo admin

--- a/ELE.Principal/bin/mensajes.properties
+++ b/ELE.Principal/bin/mensajes.properties
@@ -275,3 +275,4 @@ campo.obligatorio.resolucion.desicionTribunal = Debe ingresar la desicion del tr
 campo.obligatorio.resolucion.numActa = Debe ingresar el número de acta
 campo.obligatorio.resolucion.fechaPresentacion = Debe ingresar la fecha de presentacion del recurso
 campo.obligatorio.resolucion.accionante = Debe ingresar el nombre del Accionate
+lblInfoTipoArchivoExcel=Señor(a) Usuario(a), recuerde que solo se permite la carga de archivos de tipo Excel. 
