mejoras para enviar a ambiente de producción :zap: se corrige formato 458 y 459

--- a/ELE.Principal/bin/mensajes.properties
+++ b/ELE.Principal/bin/mensajes.properties
@@ -213,7 +213,8 @@ campo.obligatorio.inadmision.razon1			= Debe ingresar por lo menos una razón de 
 # Campos del formulario de resolucion
 ################
 campo.obligatorio.resolucion.cabezaPlancha 	= El documento del cabeza de plancha es requerido para el proceso.
-campo.obligatorio.resolucion.resolucionNro 	= El Nro de Resolución es requerido para el proceso.
+campo.obligatorio.resolucion.numeroResolucion 	= El campo Número de resolucion es requerido para el proceso.
+campo.obligatorio.resolucion.resolucionNro 	= El campo Resolución Nro es requerido para el proceso.
 campo.obligatorio.resolucion.impugnada 		= La resolución impugnada es requerida para el proceso.
 campo.obligatorio.resolucion.argumentoResolucion = Debe ingresar por lo menos un argumento de resolución.
 campo.obligatorio.resolucion.razonResolucion = Debe ingresar por lo menos una razón de resolución.
@@ -275,4 +276,3 @@ campo.obligatorio.resolucion.desicionTribunal = Debe ingresar la desicion del tr
 campo.obligatorio.resolucion.numActa = Debe ingresar el número de acta
 campo.obligatorio.resolucion.fechaPresentacion = Debe ingresar la fecha de presentacion del recurso
 campo.obligatorio.resolucion.accionante = Debe ingresar el nombre del Accionate
-lblInfoTipoArchivoExcel=Señor(a) Usuario(a), recuerde que solo se permite la carga de archivos de tipo Excel. 
