--- a/ELE.web/src/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/src/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -139,7 +139,7 @@ lblCargarFotoCabezaPlancha2 = Si cuenta con una foto tipo documento en formato d
 lblCargarFotoCabezaPlancha3 = Tama\u00F1o m\u00EDnimo\: 4 X 5 Cent\u00EDmetros 
 lblCargarFotoCabezaPlancha4 =Fondo\: Preferiblemente sobre fondo blanco 
 lblCargarFotoCabezaPlancha5 =Resoluci\u00F3n\:300 DPI 
-lblCargarFotoCabezaPlancha6 =Formatos: JPG  / TIFF
+lblCargarFotoCabezaPlancha6 =Formatos: JPG
 lblCargarFotoCabezaPlancha7 = Se recomienda que sean a color y NO deben venir insertas en programas como Word, Excel o Power Point
 ttlExperiencia = Experiencia laboral ultimo cargo e información academica
 bienvenido = Bienvenido
@@ -474,8 +474,8 @@ lblFechaElaboracion = Fecha (aaaa/mm/dd) elaboración del documento
 lblHora = Hora
 lblNumPlancha = Plancha No.
 lblNumComisionRechazo = Comisión Electoral Resolución de rechazo No.
-lblResolucionApelada = Resolución Apelada No.
-lblResolucionModifica = No. Resoluci\u00F3n que se Modifica 
+lblResolucionApelada = Resolución Apelada N\u00B0.
+lblResolucionModifica = Resoluci\u00F3n N\u00B0 que resuelve el recurso 
 lblResolucionExtemporaneamente = Resolucion que resuelve recurso interpuesto extemporaneamente No.
 lblResolucionDecision = Decisi\u00F3n de la Comisi\u00F3n Electoral\: Resoluci\u00F3n No. 
 lblNombreRepresentante = Nombre Representante Comisión Electoral
@@ -516,6 +516,7 @@ lblRazon1 = Razon No. 1
 lblRazon4 = Razon No. 4
 lblFechaFirma = Fecha Firma
 lbldisionTribunal =Decisi\u00F3n del Tribunal
+lblDecisionComision=Decisi\u00F3n de la Comisi\u00F3n
 lbldisionTribunalCO-FT-459 = Resolución que deniega recurso de reposición y no concede apelación por no ser solicitado
 lbldisionTribunalCO-FT-460 = Resolución que resuelve recurso de reposición en contra y remite apelación
 lbldisionTribunalCO-FT-461 = Resolución que resuelve un recurso de apelación favorable
@@ -554,4 +555,4 @@ lblDetallePendientes=Detalle de Pendientes
 lblTipoFirma=Firmar Plancha
 confirmacionFirmaPresencial=Estimado(a) Asociado(A) para finalizar su proceso de inscripci\u00F3n de planchas, deber\u00E1 descargar los formatos diligenciados y hacerlos firmar por cada uno de los integrantes de la plancha. Estos documentos deben ser radicados ante la Comisi\u00F3n Electoral en la oficina de Coomeva definida para inscripci\u00F3n de planchas.\nConsulte la oficina https://www.coomeva.com.co/elecciondelegados2022/
 confirmacionFirmaVirtual=Estimado(a) Asociado(a) para finalizar su proceso de inscripci\u00F3n de plancha, deber\u00E1 firmar los formatos de manera electronica. Pronto le llegar\u00E1 a cada integrante de la plancha un correo electronico para su respectiva firma. Una vez realizado este proceso, la Comisi\u00F3n Electoral proceder\u00E1 a generar el certificado de radicaci\u00F3n y recibo.
-
+lblInfoTipoArchivoExcel=Señor(a) Usuario(a), recuerde que solo se permite la carga de archivos de tipo Excel.
