--- a/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
+++ b/ELE.web/WebRoot/WEB-INF/classes/co/com/coomeva/ele/etiquetas/etiquetas.properties
@@ -139,7 +139,7 @@ lblCargarFotoCabezaPlancha2 = Si cuenta con una foto tipo documento en formato d
 lblCargarFotoCabezaPlancha3 = Tama\u00F1o m\u00EDnimo\: 4 X 5 Cent\u00EDmetros 
 lblCargarFotoCabezaPlancha4 =Fondo\: Preferiblemente sobre fondo blanco 
 lblCargarFotoCabezaPlancha5 =Resoluci\u00F3n\:300 DPI 
-lblCargarFotoCabezaPlancha6 =Formatos: JPG
+lblCargarFotoCabezaPlancha6 =Formato: jpg
 lblCargarFotoCabezaPlancha7 = Se recomienda que sean a color y NO deben venir insertas en programas como Word, Excel o Power Point
 ttlExperiencia = Experiencia laboral ultimo cargo e información academica
 bienvenido = Bienvenido
